2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Commented the header file. Added an
	  enum to describe the returned error codes.

2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>

	*  configure.ac, tools/Makefile.am: Added pkgconfig check for curl.
	   Removed hardcoded link to curl.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Fix version number, remove sigc 1.x check.

	* libwfut/WFUT.cpp: Return error when failing parse local list.

	* tools/wfut.cpp: Implement the use of a tmpfile to record files as they	  are updated.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Fix some spelling errors.

	* libwfut/WFUT.cpp: Change some of the textual output.

	* tools/wfut.cpp: Added command line args to specify the
	  system/reference location and a prefix/destination location. Added
	  lots of comments. Actually save the correct file list (local list and
	  successful updates) and make a note of errors.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/ChannelFileList.h, libwfut/ChannelIO.h,
	  libwfut/ChannelParser.cpp, libwfut/ChannelWriter.cpp,
	  libwfut/Encoder.cpp, libwfut/FileIO.h, libwfut/FileParser.cpp,
	  libwfut/FileWriter.cpp, libwfut/IO.h, libwfut/Makefile.am,
	  libwfut/WFUT.cpp, libwfut/crc32.h, libwfut/header.h, libwfut/types.h:
	  Updated for make distcheck and copyright years.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac, Makefile.am, tools/Makefile.am: Added a tools subdir.

	* tools/wfut.cpp: Added a basic command line updater program.

	* libwfut/IO.cpp, libwfut/IO.h: Download files into a tmp file first,
	  then copy to target location only on a successfull download. Fix
	  createParentDirs so that it will recursively create the required dirs.
	  Changed the download stucture to contain a path prefix and the
	  filename relative to the path so the filename can be used as a key